--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ html, body{
 *{box-sizeing:border-box;}
 
 a{
-    text-decoration: none;
-    color: #5a5a5a;
+    /*text-decoration: none;*/
+    color: #336699;
 }
 
 .tutorial{
